# DiGiT

./: .gitignore  .gitmodules  README.md  compile_commands.json  requirements.txt  wq.sh
GIDS_Setup/: setup.py  trans.py
GIDS_Setup/GIDS/: GIDS.py  breakdown.py
GIDS_Setup/GIDS.egg-info/: PKG-INFO  SOURCES.txt
bam_digit/: .gitignore  CMakeLists.txt  build_1u.sh  build_4u_DEBUG.sh  cuda-gdb  proxy.sh  run.sh
bam_digit/benchmarks/block/: CMakeLists.txt  main-jc.cu  settings.h
bam_digit/benchmarks/block-cache/: CMakeLists.txt  main-float-cache.cu  main-float-cache_jc.cu  settings.h
bam_digit/benchmarks/readwrite_stripe/: CMakeLists.txt  main-jc.cu  main.cu  settings.h
bam_digit/include/: buffer.h  ctrl.h  nvm_util.h  page_cache.h  util.h
bam_digit/module/: ctrl.c
bam_digit/src/: ctrl.cpp
evaluation/: common_parser.py  dataloader.py  feature_realloc.py  graph_reorder.py  graph_reorganization.py  homogenous_train.py  homogenous_train_baseline.py  models.py  ogb_dataloader.py  page_rank_node_list_gen.py  reorder_final.ipynb  write_data.sh
evaluation/__pycache__/: graph_reorder.ipynb
gids_module/: gids_kernel.cu  gids_nvme.cu
gids_module/include/: bam_nvme.h
scripts/: BaM_benchmark.md  GIDS_Train_4u.md  GIDS_build_4u.sh
